<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnology</groupId>
    <artifactId>duui-mm</artifactId>
    <version>1.0-SNAPSHOT</version>
    <licenses>
        <license>
            <name>AGPL-3.0-or-later</name>
            <url>https://www.gnu.org/licenses/agpl.txt</url>
            <distribution>repo</distribution>
            <comments>GNU Affero General Public License v3.0 or later</comments>
        </license>
    </licenses>

    <organization>
        <name>Texttechnology Lab</name>
        <url>https://www.texttechnologylab.org</url>
    </organization>
    <developers>
        <developer>
            <id>mehler</id>
            <name>Prof. Dr. Alexander Mehler</name>
            <email>mehler@em.uni-frankfurt.de</email>
            <url>https://www.texttechnologylab.org/team/alexander-abrami/</url>
            <organization>Goethe University Frankfurt / Texttechnology Lab</organization>
            <organizationUrl>https://www.texttechnologylab.org</organizationUrl>
            <roles>
                <role>head of department</role>
            </roles>
        </developer>
        <developer>
            <id>aabusale</id>
            <name>Ali Abusaleh</name>
            <email>a.abusaleh@em.uni-frankfurt.de</email>
            <url>https://www.texttechnologylab.org/team/ali-abusaleh/</url>
            <organization>Goethe University Frankfurt / Texttechnology Lab</organization>
            <organizationUrl>https://www.texttechnologylab.org</organizationUrl>
            <roles>
                <role>Research assistant</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.util=ALL-UNNAMED
                        <!--                        add-opens for use in JUnit-Tests...-->
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <dkpro.core.version>2.4.0</dkpro.core.version>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.dkpro.core</groupId>
                <artifactId>dkpro-core-asl</artifactId>
                <version>${dkpro.core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--<dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>${ttlab.duui.version}</version>
        </dependency>-->
        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>fac60bef3f</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>com.github.texttechnologylab.textimager-uima</groupId>-->
        <!--            <artifactId>textimager-uima-util</artifactId>-->
        <!--            <version>${ttlab.textimager.typesystem.version}</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>3.0.5</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>org.texttechnologylab.annotation</groupId>-->
        <!--            <artifactId>typesystem</artifactId>-->
        <!--            <version>3.0.1</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.texttechnologylab</groupId>-->
        <!--            <artifactId>DockerUnifiedUIMAInterface</artifactId>-->
        <!--            <version>1.3</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-segmentation-asl</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-xmi-asl</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-json-asl</artifactId>
            <version>2.0.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-resources-asl</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>